# nuke-node-modules

./: .gitignore  Cargo.toml  README.md
.cargo-husky/hooks/: pre-push
benches/: deletion_benchmark.rs
integration-tests/: integration.rs
src/: cleaner.rs  cli.rs  lib.rs  main.rs  scanner.rs
tests/: cleaner_tests.rs  cli_tests.rs  lib_tests.rs  main_tests.rs  scanner_tests.rs
tests/common/: mod.rs
